--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </section>
         <div class="beauty">
             <span>Salon</span>
+            <span><a href="about.html">About</a></span>
             <span>Barber</span>
             <span>FAQs</span>
             <span>Sign In</span>
